- Fix compose window doesn't fit 1024x768 window (#1485396)

--- a/skins/default/mail.css
+++ b/skins/default/mail.css
@@ -919,12 +919,12 @@ div.message-htmlpart div.rcmBody
 {
   position: absolute;
   top: 90px;
-  left: 200px;
+  left: 190px;
   right: 25px;
   bottom: 30px;
   margin: 0px;
   /* css hack for IE */
-  width: expression((parseInt(document.documentElement.clientWidth)-220)+'px');
+  width: expression((parseInt(document.documentElement.clientWidth)-210)+'px');
   height: expression((parseInt(document.documentElement.clientHeight)-120)+'px');
 }
 
